@@ -4,8 +4,6 @@
 #  @COPYRIGHT@
 #
 
-GNUSTEP_MAKEFILES = $(GNUSTEP_SYSTEM_ROOT)/Makefiles
-
 include $(GNUSTEP_MAKEFILES)/common.make
 
 ###########################################################################
