@@ -1,7 +1,7 @@
 {
-    STScriptingInfoClass = STFoundationModule;
+    ScriptingInfoClass = STFoundationModule;
     
-    STClasses = (
+    Classes = (
 
         GSMimeCodingContext,
         GSMimeDocument,
