@@ -1,5 +1,5 @@
 {
-    STScriptingInfoClass = SimpleTranscriptModule;
-    STClasses = (
+    ScriptingInfoClass = SimpleTranscriptModule;
+    Classes = (
     );
 }
