@@ -19,8 +19,6 @@
 #  License along with this library; if not, write to the Free
 #  Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.
 
-GNUSTEP_MAKEFILES = $(GNUSTEP_SYSTEM_ROOT)/Makefiles
-
 include $(GNUSTEP_MAKEFILES)/common.make
 
 include ../Version
