@@ -1,4 +1,12 @@
-2003 Apr 22
+2003 May 2   Stefan Urbanek <urbanek@host.sk>
+
+    * STBundleInfo: added objectReferenceDictionary; removed unnecessary ST 
+      prefix from ScriptingInfo.plist keys and added warnings for the change.;
+      check for existence of ScriptingInfo.plist before using it
+    * Modules: reflect changes to STBundleInfo
+    * Updated all GNUmakefiles to use new path
+
+2003 Apr 22  Stefan Urbanek <urbanek@host.sk>
 
     * Added library reference documentation generated by autogsdoc.
     * Added TroubleShooting.txt document
